# Jackett_Indexerr

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  add_indexer.py  config.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml
