[metadata]
name = Jackett_Indexerr
summary = Simple Python script to create and update indexers from Jackett in Radarr, Sonarr and Lidarr
description-file = README.md
author = Guilhem23
author-email = none@none.net
home-page = ttps://github.com/Guilhem23/Jackett_Indexerr
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[files]
packages =
    add_indexer


